--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <!-- Load Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -20,6 +19,9 @@
     };
     firebase.initializeApp(config);
   </script>
+
+  <!--<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>-->
+  <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
 </head>
 
 <body>
