--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     firebase.initializeApp(config);
   </script>
 
-  <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
+  <!--<script type='text/javascript' src="//wurfl.io/wurfl.js"></script>-->
 </head>
 
 <body>
